--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "sass": "node-sass-chokidar src/ -o src/ --watch --recursive"
+    "sass": "node-sass-chokidar src/ -o src/ --watch --recursive",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "node-sass-chokidar": "^0.0.3"
   }
 }
