--- a/vueify/package.json
+++ b/vueify/package.json
@@ -21,6 +21,7 @@
     "@vue/component-compiler-utils": "^2.3.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-preset-env": "^1.7.0",
     "components": "^0.1.0",
     "eslint": "^5.10.0",
     "eslint-plugin-vue": "^5.0.0",
