--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "lotro-cl",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "homepage": "https://xevrem.github.io/lotro-cl",
   "dependencies": {
-    "idb": "^2.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-modal": "^3.3.2",
-    "react-scripts": "1.1.1"
+    "idb": "^4.0.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-modal": "^3.11.1",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "sass": "node-sass-chokidar src/ -o src/ --watch --recursive",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "node-sass-chokidar": "^0.0.3"
+    "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
