--- a/vueify/.eslintrc.json
+++ b/vueify/.eslintrc.json
@@ -5,8 +5,8 @@
         "serviceworker": true,
         "jest": true
     },
-    "parser": "vue-eslint-parser",
-    "extends": ["eslint:recommended", "plugin:vue/recommended"],
+    "parser": "babel-eslint",
+    "extends": ["eslint:recommended"],
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
@@ -14,9 +14,6 @@
         },
         "sourceType": "module"
     },
-    "plugins": [
-        "vue"
-    ],
     "rules": {
         "indent": [
             "error",
