--- a/vueify/jsconfig.json
+++ b/vueify/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "baseUrl": "src",
+    "target": "es2019",
+    "baseUrl": "src"
   },
   "include": [
     "./src/**/*"
