--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://xevrem.github.io/lotro-cl",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2",
-    "react-scripts": "^3.4.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,8 +18,11 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1"
+    "gh-pages": "^3.2.3",
+    "jest": "^26.6.0",
+    "jest-watch-typeahead": "^0.6.4",
+    "node-sass": "^6.0.1",
+    "resolve-url-loader": "^4.0.0"
   },
   "browserslist": {
     "production": [
